Chnage the name of topics and disable tf_conversions

--- a/src/duckietown_msgs/CMakeLists.txt
+++ b/src/duckietown_msgs/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   visualization_msgs
   sensor_msgs
-  tf_conversions
+#  tf_conversions
   tf
 )
 
